<resources>
    <string name="app_name"></string>

        <string name="to_do_list_title">To-Do List</string>
        <string name="add_task">Add Task</string>
        <string name="enter_task_hint">Enter task</string>

        <string name="schedule_title">Schedule</string>
        <string name="add_schedule">Add Schedule</string>
        <string name="enter_schedule_hint">Enter schedule</string>

        <string name="reminders_title">Reminders</string>
        <string name="add_reminder">Add Reminder</string>
        <string name="enter_reminder_hint">Enter reminder</string>


</resources>
